hello-app/manifests/helloweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
        gitsha: "${GIT_SHA}"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  gitsha: "${GIT_SHA}"
                matchExpressions:
                  - {key: app, operator: In, values: [hello]}
                  - {key: tier, operator: In, values: [web]}
              topologyKey: kubernetes.io/hostname
      containers:
      - name: hello-app
        image: ${DOCKER_IMAGE}
        imagePullPolicy: Always
        ports:
        - name: app-port
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: app-port
            httpHeaders:
            - name: X-Custom-Header
              value: Awesome
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /readiness
            port: app-port
          initialDelaySeconds: 3
          periodSeconds: 10
