hello-app/manifests/helloweb-ingress-static-ip.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: helloweb-ip
    ingress.kubernetes.io/rewrite-target: /
  labels:
    app: hello
spec:
  rules:
  - http:
      paths:
      - path: /hello
        backend:
          serviceName: helloweb-backend
          servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: helloweb-backend
  labels:
    app: hello
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app: hello
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
